# hart

./: .gitignore  README.md
backend/: pyproject.toml
frontend/: .gitignore  config-overrides.js  package-lock.json  package.json
frontend/src/: Store.js  cachedResponse.js  index.css  index.js  store.js
frontend/src/Components/: App.js  Directions.js  Map.js  Profile.js  RouteVIew.js  WelcomeScreen.js  WelcomingScreen.js
frontend/src/Components/Profile/: SiteCard.js
frontend/src/Components/RouteView/: Map.js  TripPlan.js
frontend/src/Components/sass/: App.scss  Map.scss  Profile.scss  RouteView.scss  WelcomeScreen.scss
frontend/src/Data/: matrix.js  places_details.js
graph_builder/: ams_nearby.json  coords.csv  handpicked.md  matrix_advanced.json  package-lock.json  package.json
graph_builder/data/: matrix.json  matrix_advanced.json  places_details.json
graph_builder/src/: core.js  mockData.js  utils.js
planner/: build.gradle  settings.gradle
planner/src/main/kotlin/: app.kt
planner/src/main/kotlin/domain/: Action.kt  ActionDifficultyComparator.kt  ActionifficultyWeightFactory.kt  Landmark.kt  LandmarkStrengthComparator.kt  Path.kt  PathStrengthComparator.kt  Solution.kt  SolutionEasyScoreCalculator.kt  Travel.kt  TravelItem.kt  Visit.kt
planner/src/main/resources/: config.xml  log4j.properties  rules.dri
