[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["alex4o <mrabonin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
flask = "^1.1"
flask-swagger = "^0.2.14"
sklearn = "^0.0.0"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
